--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\jetoftu\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36\\python.exe",
-    "python.linting.pylintEnabled": false,
-    "python.linting.mypyEnabled": true,
-    "python.linting.enabled": true
+    "python.linting.pylintEnabled": true,
+    "python.pythonPath": "C:\\Users\\jetoftu\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36\\python.exe"
 }
