--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "python.linting.pylintEnabled": true,
-    "python.pythonPath": "C:\\Users\\jetoftu\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36\\python.exe"
+    "python.pythonPath": "C:\\Users\\jetoftu\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36\\python.exe",
+    "cSpell.ignoreWords": [
+        "prec"
+    ]
 }
