--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.linting.pylintEnabled": true,
     "python.pythonPath": "C:\\Users\\jetoftu\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36\\python.exe",
     "cSpell.ignoreWords": [
+        "msecs",
         "prec"
     ]
 }
